# webtronics

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 1353643e567d_reworked_like_model.py  41e0dcac0983_post_and_like.py  cc339157475b_initial_migration.py  d4ea7ee1adb5_likes_and_dislikes_difference.py
auth/: jwt_bearer.py  jwt_handler.py  services.py
data/: methods.py  models.py
